acvus-mir-test/tests/snapshots/inline__inline_multiple_context_writes.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @a
     1 │   r1 = context_load r0
     2 │   r2 = context_project @b
     3 │   r3 = context_load r2
     5 │   r4 = context_project @a
     6 │   ctx_store r4 = 1 (r5)
     8 │   r6 = context_project @b
     9 │   ctx_store r6 = 2 (r7)
    10 │   r8 = context_project @a
    11 │   r9 = context_load r8
    12 │   r10 = context_project @b
    13 │   r11 = context_load r10
    14 │   r12 = r9 + r11
    15 │   return r12

    ; r0 (@a) : Int
    ; r1 (v3) : Int
    ; r2 (@b) : Int
    ; r3 (v5) : Int
    ; r4 (v7) : Int
    ; r5 (v6) : Int
    ; r6 (v9) : Int
    ; r7 (v8) : Int
    ; r8 (@a) : Int
    ; r9 (v11) : Int
    ; r10 (@b) : Int
    ; r11 (v13) : Int
    ; r12 (v14) : Int
    ; r13 (init(...)) : Int
