acvus-mir-test/tests/snapshots/inline__inline_nested_three_levels.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 │   r0 = 10 (r1) + 1 (r2)
     4 │   r3 = 10 (r1) + 1 (r4)
     5 │   r5 = r0 + r3
     7 │   r6 = r5 * 2 (r7)
     8 │   return r6

    ; r0 (v13) : Int
    ; r1 (v0) : Int
    ; r2 (v12) : Int
    ; r3 (v16) : Int
    ; r4 (v15) : Int
    ; r5 (v10) : Int
    ; r6 (v5) : Int
    ; r7 (v4) : Int
    ; r8 ($x) : Int
    ; r9 (b(...)) : Int
    ; r10 ($x) : Int
    ; r11 ($x) : Int
    ; r12 (a(...)) : Int
    ; r13 (c(...)) : Int
    ; r14 (a(...)) : Int
    ; r15 ($x) : Int
    ; r16 ($x) : Int
