acvus-mir-test/tests/snapshots/inline__inline_preserves_extern_call.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 │   r0 = call #0(42 (r1))
     2 │   return r0

    ; r0 (to_string(...)) : String
    ; r1 (v1) : Int
