acvus-mir-test/tests/snapshots/inline__inline_pure_function.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 │   r0 = 1 (r1) + 2 (r2)
     3 │   return r0

    ; r0 (v6) : Int
    ; r1 (v1) : Int
    ; r2 (v2) : Int
    ; r3 (add(...)) : Int
    ; r4 ($b) : Int
    ; r5 ($a) : Int
