acvus-mir-test/tests/snapshots/inline__inline_return_used_in_binop.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 │   r0 = ref $v1
     2 │   r1 = load r0
     3 │   r2 = ref $v1
     4 │   r3 = load r2
     5 │   r4 = r1 * r3
     7 │   r5 = ref $v3
     8 │   r6 = load r5
     9 │   r7 = ref $v3
    10 │   r8 = load r7
    11 │   r9 = r6 * r8
    12 │   r10 = r4 + r9
    13 │   return r10

    ; r0 (v7) : Ref<Int>
    ; r1 ($x) : Int
    ; r2 (v9) : Ref<Int>
    ; r3 ($x) : Int
    ; r4 (v11) : Int
    ; r5 (v13) : Ref<Int>
    ; r6 ($x) : Int
    ; r7 (v15) : Ref<Int>
    ; r8 ($x) : Int
    ; r9 (v17) : Int
    ; r10 (v5) : Int
    ; r11 (v3) : Int
    ; r12 (v1) : Int
    ; r13 (square(...)) : Int
    ; r14 (square(...)) : Int
