acvus-mir-test/tests/snapshots/inline__inline_simple_call.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 │   r0 = 5 (r1) + 5 (r1)
     2 │   return r0

    ; r0 (v5) : Int
    ; r1 (v1) : Int
    ; r2 ($x) : Int
    ; r3 ($x) : Int
    ; r4 (double(...)) : Int
