acvus-mir-test/tests/snapshots/inline__inline_string_operations.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== literals ===
  T0 = "world"
  T1 = "Hello "

=== main ===
     2 │   r0 = T1 + T0
     3 │   return r0

    ; r0 (v5) : String
    ; r1 (v1) : String
    ; r2 (v3) : String
    ; r3 ($name) : String
    ; r4 (greet(...)) : String
